apps/productivity/searxng/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: searxng
  namespace: searxng
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`searxng.internal.crussell.io`) # Update if needed
      kind: Rule
      services:
        - name: searxng
          port: http # Corrected to use the service's port name
  tls:
    certResolver: letsencrypt
